# GraphQL-JWT-Rocket-SeaORM-Postgres

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  main.rs
src/entity/: user.rs
src/graphql/: input.rs  mod.rs  schema.rs  types.rs
