[package]
name = "graphql_with_jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
async-graphql = "6"
async-graphql-rocket = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "1.0", optional = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }

jsonwebtoken = "9"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[default]
log_level = "debug"

[features]
default = []